--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 455 points<br>
+Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 458 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -32,6 +32,7 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -120,24 +121,24 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-28226 branch
-1789 status
- 757 add
- 524 commit
- 424 checkout
- 392 push
- 251 rebase
- 234 log
- 198 fetch
- 195 diff
-  78 stash
-  60 remote
-  46 submodule
-  37 reset
-  31 clone
-  29 rm
+29004 branch
+1857 status
+ 772 add
+ 533 commit
+ 438 checkout
+ 405 push
+ 259 log
+ 255 rebase
+ 209 fetch
+ 199 diff
+  82 stash
+  64 remote
+  60 submodule
+  39 reset
+  37 rm
+  33 clone
   29 config
-  26 help
+  28 help
   21 blame
   19 mv
   19 gc
@@ -149,13 +150,13 @@ Git commands sorted by usage:
    9 achievements
    8 show-ref
    8 pull
+   5 tag
    4 filter-branch
+   4 --version
    3 shortlog
+   3 clean
    2 prune
    2 count-objects
-   2 clean
-   2 --version
-   1 tag
    1 revert
    1 reflog
    1 ls-files
