--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 463 points<br>
+Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 474 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -97,6 +97,7 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Stone Mason (Level 10)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -122,38 +123,38 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-29281 branch
-1925 status
- 793 add
- 535 commit
- 457 checkout
- 409 push
- 261 log
- 259 rebase
- 217 fetch
- 203 diff
-  82 stash
-  69 remote
+35406 branch
+2299 status
+ 930 add
+ 600 commit
+ 533 checkout
+ 454 push
+ 321 log
+ 282 rebase
+ 242 fetch
+ 232 diff
+  99 stash
+  73 remote
   60 submodule
-  41 rm
-  41 reset
-  37 clone
-  29 help
+  52 reset
+  50 rm
+  42 clone
+  41 mv
+  31 help
   29 config
-  23 mv
-  21 blame
+  23 blame
   19 gc
   16 alias
   14 !git
-  10 init
-  10 fsck
+  13 pull
+  11 init
+  11 fsck
+  10 tag
    9 merge
    9 achievements
    8 show-ref
-   8 pull
-   5 tag
+   5 --version
    4 filter-branch
-   4 --version
    3 shortlog
    3 clean
    2 prune
